test/files/neg/t649.check
t649.scala:3: error: overloaded method foo needs result type
  def foo[A] = foo[A]
                  ^
one error found
